# claude-nfcore-docs

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE.md  README.md  SKILL.md  TESTS.md  pyproject.toml  ruff.toml  snippet.md  test.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
tests/: conftest.py  test_cache.py  test_cross_file.py  test_e2e.py  test_frontmatter.py  test_preamble_bash.py  test_preamble_python.py  test_structure.py
tests/fixtures/: README.md  pipelines.json  setup.sh
